--- a/base/plugin/rdbs/postgresql/pom.xml
+++ b/base/plugin/rdbs/postgresql/pom.xml
@@ -25,10 +25,9 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <!--<version>6.0.5</version>-->
-            <version>5.1.20</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
         </dependency>
     </dependencies>
 
